[gd_scene load_steps=4 format=3 uid="uid://bh5bssyjw2svh"]

[ext_resource type="Script" uid="uid://dvelsdldkoust" path="res://scripts/menus/settings_menu.gd" id="1_vi85d"]
[ext_resource type="FontFile" uid="uid://8fl7yecdpp08" path="res://fonts/Tiny5-Regular.ttf" id="2_miumm"]

[sub_resource type="LabelSettings" id="LabelSettings_0j45f"]
font = ExtResource("2_miumm")

[node name="settings menu" type="MarginContainer"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -31.0
offset_right = 22.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vi85d")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="audio_label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "AUDIO
"
label_settings = SubResource("LabelSettings_0j45f")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="video_label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "VIDEO
"
label_settings = SubResource("LabelSettings_0j45f")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="back_label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "BACK

"
label_settings = SubResource("LabelSettings_0j45f")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true
